Adjusted a lot, centered image. Added navbar.

--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
+
+    <div class="topnav">
+      <a href="mailto:rasmusbaeckstrom@gmail.com">Email me</a>
+      <a href="#myinfo">About me</a>
+      <a href="#timeline">Resumé</a>
+      <a href="https://www.linkedin.com/in/rasmus-b%C3%A4ckstr%C3%B6m-a68939b8/">My LinkedIn</a>
+      <a href="https://github.com/rasmusbaeckstrom">My Projects</a>
+    </div>
+
     <header>
+      <div>
       <h1 id="welcomemsg">
         Rasmus Bäckström, studying to become a system developer.
       </h1>
     </header>
+  </div>
 
-    <section>
+    <div id="mepic">
       <img
-        id="mepic"
         src="https://media.licdn.com/dms/image/C4E03AQFWIEA5G4NKhg/profile-displayphoto-shrink_200_200/0/1632938298396?e=1701907200&v=beta&t=8CQlkY8hzLDdysXP5a2z879zohK1SuXRgBwLrRoijaE"
         alt="profilepic"
       />
-    </section>
+    </div>
 
-    <section id="myinfo">
+    <div id="myinfo">
       <h2>About me:</h2>
       <p>
         Welcome! I'm Rasmus Bäckström, a 38-year-old living in Hjo, Sweden. I
@@ -33,9 +43,10 @@
         passion for computers and IT, curiosity, and previous work experience,
         I'm excited about this new journey.
       </p>
-    </section>
+    </div>
 
     <div class="timeline">
+      <div id="timeline">
       <div class="container left">
         <div class="content">
           <h2>2023</h2>
@@ -68,6 +79,12 @@
           <p>My first job. CNC operator at Tidamek AB (today LEAX AB).</p>
         </div>
       </div>
+    </div>
+</div>
+</br>
+
+    <div class="botnav">
+      <a href="">Take me to the top!</a>
     </div>
 
     <script src="main.js"></script>
