Adjusted timeline to "container 2" to make circle color orange to show present day.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 
     <div class="timeline">
       <div id="timeline">
-      <div class="container left">
-        <div class="content">
-          <h2>2023</h2>
-          <p>New chapter! Studying Java and JavaScript at Lernia University.</p>
-        </div>
+          <div class="container2 left">
+            <div class="content">
+              <h2>2023</h2>
+                <p>New chapter! Studying Java and JavaScript at Lernia University.</p>
+            </div>
+          </div>
       </div>
       <div class="container right">
         <div class="content">
