--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   </div>
 
     <div id="mepic">
+        <!-- La till en profilbild från din Github-->
       <img
-        src="https://media.licdn.com/dms/image/C4E03AQFWIEA5G4NKhg/profile-displayphoto-shrink_200_200/0/1632938298396?e=1701907200&v=beta&t=8CQlkY8hzLDdysXP5a2z879zohK1SuXRgBwLrRoijaE"
+        src="https://avatars.githubusercontent.com/u/144328226?v=4"
         alt="profilepic"
       />
     </div>
